--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,10 @@
 accelerate==0.23.0
-certifi==2024.6.2
-charset-normalizer==3.3.2
 diffusers==0.24.0
 DISTS-pytorch==0.1
 einops==0.6.1
-filelock==3.14.0
-fsspec==2024.6.0
-huggingface-hub==0.23.3
-idna==3.7
-importlib_metadata==7.1.0
-Jinja2==3.1.4
 lpips==0.1.4
-MarkupSafe==2.1.5
-mpmath==1.3.0
-networkx==3.3
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
 opencv-contrib-python==4.10.0.82
 opencv-python==4.10.0.82
-packaging==24.1
-pillow==10.3.0
-psutil==5.9.8
-PyYAML==6.0.1
-regex==2024.5.15
-requests==2.32.3
-safetensors==0.4.3
-scipy==1.13.1
-sympy==1.12.1
-torch==2.3.1
+tensorboard==2.14.1
 torch-ema==0.3
-torchvision==0.18.1
-tqdm==4.66.4
-triton==2.3.1
-typing_extensions==4.12.2
-urllib3==2.2.1
-zipp==3.19.2
